force-app/main/default/objects/PhoneNumberMetadata__mdt/PhoneNumberMetadata__mdt.object-meta.xml
<CustomObject>
    <label>Phone Number Metadata</label>
    <pluralLabel>Phone Number Metadata</pluralLabel>
</CustomObject>