force-app/main/default/objects/PhoneNumberMetadata__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Numeric phone country code (e.g., 34 for Spain)</description>
    <label>Country Code</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>