force-app/main/default/objects/PhoneNumberMetadata__mdt/fields/FixedLineRegex__c.field-meta.xml
<CustomField>
    <fullName>FixedLineRegex__c</fullName>
    <description>Regex specifically for fixed line numbers.</description>
    <label>Fixed Line Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>