force-app/main/default/objects/PhoneNumberMetadata__mdt/fields/GeneralDescRegex__c.field-meta.xml
<CustomField>
    <fullName>GeneralDescRegex__c</fullName>
    <description>General validation regex for the country.</description>
    <label>General Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>