force-app/main/default/objects/PhoneNumberMetadata__mdt/fields/IsoCode__c.field-meta.xml
<CustomField>
    <fullName>IsoCode__c</fullName>
    <description>ISO 3166-1 alpha-2 country code (e.g., ES, US)</description>
    <label>ISO Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>