force-app/main/default/objects/PhoneNumberMetadata__mdt/fields/MobileRegex__c.field-meta.xml
<CustomField>
    <fullName>MobileRegex__c</fullName>
    <description>Regex specifically for mobile numbers.</description>
    <label>Mobile Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>